<resources>
    <string name="app_name">Rozrachunki</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="sign_in">Logowanie</string>
    <string name="dont_remember">Nie pamietasz hasła?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="have_account">Masz już konto?</string>
    <string name="invalid_phonenumber">Please enter a valid phone number</string>
    <string name="invalid_email">Enter valid email</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_friends2">FriendsActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="filter_choice">
        <item>Wszyscy znajomi</item>
        <item>Znajomi, którym jesteś dłużny</item>
        <item>Znajomi, którzy są dłużni tobie</item>
    </string-array>
    <string-array name="filter_choice_payment">
        <item>Dzielone po równo między wszystkich</item>
        <item>Dzielone po równo pomiędzy wybranych użytkowników</item>
        <item>Dzielone między wszystkich z wprowadzeniem kwot</item>
        <item>Dzielone między wybranych użytkowników z wprowadzeniem kwot</item>
    </string-array>
    <string name="title_activity_add_friends">AddFriendsActivity</string>
</resources>

