<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_above="@id/icona"
        android:layout_gravity="center"
        android:src="@drawable/diamond"
        app:layout_constraintBottom_toTopOf="@id/icona"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/icona"
        android:layout_width="361dp"
        android:layout_height="43dp"
        android:layout_below="@+id/imageview"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/sevillana"
        android:gravity="center"
        android:text="Rozrachunki"
        android:textColor="@color/blue2"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/zalogujsie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/zalogujsie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/quicksandwght"
        android:text="Zaloguj się"
        android:textColor="@color/blue3"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/username_text_input_layout1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997"
        tools:ignore="InvalidId,MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/username_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/username"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/quicksandwght"
            android:foregroundTint="@color/orange1"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/password"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/quicksandwght"
            android:foregroundTint="@color/orange1"
            android:hint="@string/password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textColor="@color/orange1"
            app:layout_constraintBottom_toTopOf="@id/loginbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/blue2"
        android:enabled="true"
        android:text="@string/sign_in"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784"
 />

    <TextView
        android:id="@+id/niepamietaszhasla"
        android:layout_width="190dp"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/quicksandwght"
        android:gravity="center"
        android:text="@string/dont_remember"
        android:textColor="@color/grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/zarejestrujsie"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/quicksandwght"
        android:gravity="center"
        android:text="Zarejestruj się"
        android:textColor="@color/orange1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/niepamietaszhasla"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>