<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageviewAR"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_above="@id/ikonaAR"
        android:layout_gravity="center"
        android:src="@drawable/diamond"
        app:layout_constraintBottom_toTopOf="@id/ikonaAR"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ikonaAR"
        android:layout_width="366dp"
        android:layout_height="29dp"
        android:layout_below="@+id/imageview"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/sevillana"
        android:gravity="center"
        android:text="Rozrachunki"
        android:textColor="@color/blue2"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/zarejestrujsieAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/quicksandwght"
        android:text="Zarejestruj się"
        android:textColor="@color/blue3"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/username_text_input_layout1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607"
        tools:ignore="InvalidId,MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/username_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/loginAR"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/quicksandwght"
            android:foregroundTint="@color/orange1"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@id/passwordAR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/username_text_input_layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/emailAR"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/quicksandwght"
            android:foregroundTint="@color/orange1"
            android:hint="Adres e-mail"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textColor="@color/orange1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/username_text_input_layout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/passwordAR"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/quicksandwght"
            android:foregroundTint="@color/orange1"
            android:hint="@string/password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textColor="@color/orange1"
            app:layout_constraintBottom_toTopOf="@id/loginbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtnAR"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/blue2"
        android:enabled="true"
        android:text="Kontynuuj"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/maszjuzkontoAR"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/quicksandwght"
        android:gravity="center"
        android:text="@string/have_account"
        android:textColor="@color/grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtnAR"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/zalogujsieAR"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/quicksandwght"
        android:gravity="center"
        android:text="Zaloguj się!"
        android:textColor="@color/orange1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/maszjuzkontoAR"
        app:layout_constraintTop_toBottomOf="@+id/registerBtnAR"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/registerBtnAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/numberAR"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/quicksandwght"
            android:foregroundTint="@color/orange1"
            android:hint="Numer telefonu"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>